Add margin to paragraphs in `daily_minute` generator
remp/web#2198

--- a/Mailer/app/Models/Generators/resources/templates/WordpressBlockParser/core-paragraph.twig
+++ b/Mailer/app/Models/Generators/resources/templates/WordpressBlockParser/core-paragraph.twig
@@ -1,7 +1,7 @@
 <!-- core/paragraph -->
 <p style="
         font-family: Georgia, Times New Roman, serif;
-        margin: 0;
+        margin: 0 0 15px 0;
         line-height: 1.5;
         font-size: {% if fontSize %}{{ fontSize }}{% else %}18px{% endif %};
         {% if paragraph_hr %}
