Fix issue with oversize images in MS Outlook.
remp/remp#1330

--- a/Mailer/app/Models/Generators/resources/templates/WordpressBlockParser/core-image.twig
+++ b/Mailer/app/Models/Generators/resources/templates/WordpressBlockParser/core-image.twig
@@ -4,6 +4,7 @@
         <img src="{{ url }}" border="0" style="width: 100%; display: block;"
             {% if alt %}alt="{{ alt }}"{% endif %}
             {% if caption %}title="{{ caption }}"{% endif %}
+            {% if imageWidth %}width="{{ imageWidth }}"{% endif %}
         >
     {% if href %}</a>{% endif %}
 {% if caption %}<div style="color: #888;font-family: Arial,sans-serif;font-size: 14px;margin-top:5px;line-height: 1.3;">{{ caption|raw }}</div>{% endif %}
