Added device safe area top and bottom inset for Bar and CollapsibleBar banners
remp/remp#1432

--- a/Campaign/extensions/campaign-module/resources/assets/sass/banner.scss
+++ b/Campaign/extensions/campaign-module/resources/assets/sass/banner.scss
@@ -6,6 +6,14 @@
     font-family: sans-serif;
 }
 
+.remp-banner .banner-safe-area-inset-bottom {
+  padding-bottom: env(safe-area-inset-bottom, 0px);
+}
+
+.remp-banner .banner-safe-area-inset-top {
+  padding-bottom: env(safe-area-inset-top, 0px);
+}
+
 /* transitions */
 
 .remp-banner #preview-close.hidden {
