Add interim widget with schedule time - turn off autocomplete in input

--- a/Mailer/app/Components/GeneratorWidgets/Widgets/InterimWidget/interim_widget.latte
+++ b/Mailer/app/Components/GeneratorWidgets/Widgets/InterimWidget/interim_widget.latte
@@ -98,7 +98,7 @@
 
                             <div class="form-group fg-float m-b-30">
                                 <div class="fg-line">
-                                    {input send_at, class => 'form-control date-time-picker'}
+                                    {input send_at, class => 'form-control date-time-picker', autocomplete => 'off'}
                                     {label send_at, class => 'fg-label' /}
                                 </div>
                             </div>
