--- a/Mailer/app/Models/Generators/resources/templates/InterimWordpressBlockParser/core-paragraph.twig
+++ b/Mailer/app/Models/Generators/resources/templates/InterimWordpressBlockParser/core-paragraph.twig
@@ -1,1 +1,1 @@
-<p>{{ content|raw }}</p>
+<p{% if textAlign or textColor %} style="{% if textAlign %}text-align: {{ textAlign }};{% endif %}{% if textColor %} color: {{ textColor }};{% endif %}"{% endif %}>{{ content|raw }}</p>
