Add email preheader support to Mailer
Preheader is the preview text shown in email client inboxes after
the subject line. Adds a translatable preheader field to templates
with automatic injection into email HTML.

remp/remp#1451

--- a/Mailer/extensions/mailer-module/src/Presenters/templates/Template/edit.latte
+++ b/Mailer/extensions/mailer-module/src/Presenters/templates/Template/edit.latte
@@ -81,6 +81,14 @@
                                 </div>
                             </div>
 
+                            <div class="form-group fg-float">
+                                <div class="fg-line">
+                                    {input preheader, class => 'form-control fg-input'}
+                                    {label preheader, class => 'fg-label' /}
+                                </div>
+                                <small class="help-block">Text shown after subject line in email client inbox preview</small>
+                            </div>
+
                             <div class="email-editors">
                                 <div class="editors-container">
                                     <div class="fullscreen-edit-btn-div">
