--- a/Mailer/extensions/mailer-module/src/Presenters/templates/Template/general.latte
+++ b/Mailer/extensions/mailer-module/src/Presenters/templates/Template/general.latte
@@ -36,6 +36,14 @@
             {label subject, class => 'fg-label' /}
         </div>
     </div>
+
+    <div class="form-group fg-float">
+        <div class="fg-line">
+            {input preheader, class => 'form-control fg-input'}
+            {label preheader, class => 'fg-label' /}
+        </div>
+        <small class="help-block">Text shown after subject line in email client inbox preview</small>
+    </div>
 {/if}
 
 <div class="form-group fg-float">
